# Brollo_plus

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  fix_families.py  patch_families.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  router.tsx  styles.css
frontend/src/api/: accounts.ts  auth.ts  budgets.ts  categories.ts  client.ts  families.ts  quotes.ts  reports.ts  transactions.ts
frontend/src/store/: authStore.ts
frontend/src/ui/layout/: AppLayout.tsx  AuthLayout.tsx
frontend/src/ui/routing/: ProtectedRoute.tsx
frontend/src/ui/state/: PageLoading.tsx
frontend/src/views/: Accounts.tsx  Budgets.tsx  Dashboard.tsx  Family.tsx  Reports.tsx  Settings.tsx  Transactions.tsx
frontend/src/views/auth/: Login.tsx  Register.tsx
infra/nginx/: nginx.conf
services/: Cargo.toml
services/account-service/: Cargo.toml
services/account-service/src/: auth.rs  db.rs  family_helper.rs  main.rs  models.rs
services/account-service/src/handlers/: accounts.rs  categories.rs  mod.rs
services/budget-service/: Cargo.toml
services/budget-service/src/: auth.rs  db.rs  family_helper.rs  main.rs  models.rs
services/budget-service/src/handlers/: budgets.rs
services/common/: Cargo.toml
services/common/src/: lib.rs
services/quote-service/: Cargo.toml
services/quote-service/src/: auth.rs  db.rs  main.rs
services/quote-service/src/handlers/: quotes.rs
services/report-service/: Cargo.toml
services/report-service/src/: auth.rs  db.rs  main.rs
services/report-service/src/handlers/: reports.rs
services/transaction-service/: Cargo.toml
services/transaction-service/src/: db.rs  family_helper.rs  main.rs  models.rs
services/transaction-service/src/handlers/: transactions.rs
services/user-service/: Cargo.toml
services/user-service/migrations/: 0001_init.sql  0002_families.sql
services/user-service/src/: main.rs  state.rs
services/user-service/src/routes/: auth.rs  families.rs  mod.rs  users.rs
系统设计/: 01-系统架构设计.md  02-数据库设计.md  03-API接口设计.md  04-核心算法设计.md  05-前端架构设计.md  06-安全设计.md  07-测试与部署方案.md  08-系统顶层数据流图.html  09-系统一层数据流图.html  10-系统核心ER图.html  11-系统类图.html  12-新增交易业务时序图.html  13-新增交易业务流程图.html  14-系统设计图索引.html  系统展望.md
