[package]
name = "budget-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
common = { path = "../common" }
dotenvy = "0.15"
futures = "0.3"
mongodb = "3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
lapin = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde-human-readable"] }
jsonwebtoken = "9"
bson = { version = "2", features = ["uuid-1"] }
reqwest = { version = "0.12", features = ["json"] }
