[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
http = "1"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde-human-readable"] }

